# nodegoat

./: .editorconfig  CHANGELOG.md  LICENSE.txt  README.md  SETUP.md  UPDATE.md
.github/workflows/: checkmarx-one.yml
APP/SETTINGS/nodegoat/: settings.php
APP/nodegoat/: js_css.php
APP/nodegoat/CMS/: js_css.php
APP/nodegoat/CMS/classes/: AnalyseTypeObjects.php  AnalyseTypeObjectsServer.php  CacheProjectTypeScenario.php  ChangeTypeObjects.php  CollectTypeObjects.php  CollectTypeObjectsValues.php  CollectTypesObjects.php  CollectTypesObjectsValues.php  CreateObjectsPackage.php  CreateProjectOverviewGraph.php  CreateTypesObjectsPackage.php  CreateVisualisationPackage.php  EnucleateMedia.php  EnucleateValueTypeMedia.php  EnucleateValueTypeModule.php  EnucleateValueTypeModuleBase.php  EnucleateValueTypeModuleMusicNotation.php  ExportObjectNetwork.php  ExportTypesObjectsNetwork.php  ExportTypesObjectsNetworkCSV.php  ExportTypesObjectsNetworkODT.php  ExternalResource.php  FilterTypeObjects.php  FormatTypeObjects.php  FormatTypeObjectsBase.php  GenerateTypeObjects.php  ImportTypeObjects.php  IndexTypeObjectsInformationRetrieval.php  IngestTypeObjects.php  IngestTypeObjectsFile.php  IngestTypeObjectsResourceExternal.php  MergeTypeObjects.php  ParseTypeFeatures.php  PatternEntity.php  PublishInstanceProject.php  QueryTypeObjectsInformationRetrieval.php  ReconcileTypeObjectsValues.php  ResourceExternal.php  StoreCustomProject.php  StoreIngestFile.php  (+16 more)
APP/nodegoat/CMS/modules/: 510-cms_nodegoat_details.php  511-cms_nodegoat_definitions.php  512-cms_nodegoat_import.php  512-cms_nodegoat_ingest.php  520-cms_nodegoat_custom_projects.php  521-cms_nodegoat_api.php  522-cms_nodegoat_public_interfaces.php  523-cms_nodegoat_publish.php
APP/nodegoat/css/: home.css  labmap.css  nodegoat.css  theme.json
APP/nodegoat/js/: Centrality.js  LayoutForceAtlas2.js  Map.js  MapData.js  MapDrawPoints.js  MapGeo.js  MapGeoUtilities.js  MapManager.js  MapNetworkMetrics.js  MapNetworkMetricsWorker.js  MapSocial.js  MapTimeline.js  MapUtilities.js  home.js  vfs_fonts.js
APP/nodegoat/modules/: 013-register_by_user.php  040-api_configuration.php  112-header.php  113-toolbar.php  510-data_entry.php  511-data_view.php  512-data_filter.php  513-data_api.php  514-data_ingest.php  515-data_reconcile.php  520-data_model.php  521-data_import.php  522-data_linked_data.php  523-data_pattern_pairs.php  530-data_visualise.php  531-data_analysis.php  540-custom_projects.php  541-public_interfaces.php  542-publish_instances.php  582-ui.php  583-ui_data.php  584-ui_selection.php  585-ui_filter.php  590-publish.php
PROGRAMS/graph_analysis/: CMakeLists.txt  graph_analysis.hpp  program.cpp
PROGRAMS/graph_analysis/include/: betweenness_centrality_filtered.hpp  custom_dijkstra_call.hpp  yen_ksp.hpp
PROGRAMS/information_retrieval/: CMakeLists.txt  information_retrieval_index.hpp  information_retrieval_query.hpp  program.cpp
setup/: nodegoat_cms.cms_labels.sql  nodegoat_cms.various.sql  nodegoat_content.sql  nodegoat_home.changes.sql  nodegoat_home.sql  nodegoat_home.various.sql
(+11 files in other folders)
